--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout || Qutiiz || Qutiiz HTML Template For Business</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicons/favicon-16x16.png" />
+    <link rel="manifest" href="../assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Qutiiz HTML Template For Business" />
 
     <!-- fonts -->
@@ -25,37 +25,37 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/animate.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/custom-animate.css" />
-    <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jarallax/jarallax.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
-    <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
-    <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons/style.css">
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons-two/style.css">
-    <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="assets/vendors/bxslider/jquery.bxslider.css" />
-    <link rel="stylesheet" href="assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="assets/vendors/vegas/vegas.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
-    <link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css" />
-    <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css" />
+    <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/animate/animate.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/animate/custom-animate.css" />
+    <link rel="stylesheet" href="../assets/vendors/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/jarallax/jarallax.css" />
+    <link rel="stylesheet" href="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
+    <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.pips.css" />
+    <link rel="stylesheet" href="../assets/vendors/odometer/odometer.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/swiper/swiper.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/qutiiz-icons/style.css">
+    <link rel="stylesheet" href="../assets/vendors/qutiiz-icons-two/style.css">
+    <link rel="stylesheet" href="../assets/vendors/tiny-slider/tiny-slider.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/reey-font/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/bxslider/jquery.bxslider.css" />
+    <link rel="stylesheet" href="../assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/vegas/vegas.min.css" />
+    <link rel="stylesheet" href="../assets/vendors/jquery-ui/jquery-ui.css" />
+    <link rel="stylesheet" href="../assets/vendors/timepicker/timePicker.css" />
+    <link rel="stylesheet" href="../assets/vendors/nice-select/nice-select.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/qutiiz.css" />
-    <link rel="stylesheet" href="assets/css/qutiiz-responsive.css" />
+    <link rel="stylesheet" href="../assets/css/qutiiz.css" />
+    <link rel="stylesheet" href="../assets/css/qutiiz-responsive.css" />
 </head>
 
 <body>
     <div class="preloader">
-        <img class="preloader__image" width="60" src="assets/images/loader.png" alt="" />
+        <img class="preloader__image" width="60" src="../assets/images/loader.png" alt="" />
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -64,14 +64,14 @@
                 <div class="main-menu-wrapper clearfix">
                     <div class="main-menu-wrapper__left">
                         <div class="main-menu-wrapper__logo">
-                            <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                            <a href="../index.html"><img src="../assets/images/resources/logo-1.png" alt=""></a>
                         </div>
                         <div class="main-menu-wrapper__main-menu">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
 
                                 <li class="dropdown megamenu">
-                                    <a href="index.html">Home </a>
+                                    <a href="../index.html">Home </a>
                                      
                                 </li>
 
@@ -153,7 +153,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(../assets/images/backgrounds/page-header-bg.jpg)">
             </div>
             <div class="page-header-border"></div>
             <div class="page-header-border page-header-border-two"></div>
@@ -169,7 +169,7 @@
             <div class="container">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li class="active">shop</li>
                     </ul>
                     <h2>Checkout</h2>
@@ -422,7 +422,7 @@
                                 </div><!-- /.checkout__payment__item -->
                                 <div class="checkout__payment__item">
                                     <h3 class="checkout__payment__title">Paypal payment <img
-                                            src="assets/images/update1.0/resources/paypal-1.jpg" alt=""></h3>
+                                            src="../assets/images/update1.0/resources/paypal-1.jpg" alt=""></h3>
                                     <div class="checkout__payment__content">
                                         Make your payment directly into our bank account. Please
                                         use your Order ID as the payment reference. Your order
@@ -448,7 +448,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <div class="site-footer__top-logo">
-                                <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt=""></a>
+                                <a href="../index.html"><img src="../assets/images/resources/footer-logo.png" alt=""></a>
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
@@ -468,7 +468,7 @@
             </div>
             <div class="site-footer__middle">
                 <div class="site-footer-shape"
-                    style="background-image: url(assets/images/shapes/site-footer-shape.png)"></div>
+                    style="background-image: url(../assets/images/shapes/site-footer-shape.png)"></div>
                 <div class="container">
                     <div class="site-footer__middle-inner">
                         <div class="row">
@@ -586,7 +586,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
+                <a href="../index.html" aria-label="logo image"><img src="../assets/images/resources/logo-1.png" width="155"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
@@ -638,35 +638,35 @@
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
 
-    <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendors/jarallax/jarallax.min.js"></script>
-    <script src="assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
-    <script src="assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
-    <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script src="assets/vendors/jquery-validate/jquery.validate.min.js"></script>
-    <script src="assets/vendors/nouislider/nouislider.min.js"></script>
-    <script src="assets/vendors/odometer/odometer.min.js"></script>
-    <script src="assets/vendors/swiper/swiper.min.js"></script>
-    <script src="assets/vendors/tiny-slider/tiny-slider.min.js"></script>
-    <script src="assets/vendors/wnumb/wNumb.min.js"></script>
-    <script src="assets/vendors/wow/wow.js"></script>
-    <script src="assets/vendors/isotope/isotope.js"></script>
-    <script src="assets/vendors/countdown/countdown.min.js"></script>
-    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendors/bxslider/jquery.bxslider.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
-    <script src="assets/vendors/vegas/vegas.min.js"></script>
-    <script src="assets/vendors/nice-select/jquery.nice-select.min.js"></script>
-    <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="../assets/vendors/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendors/jarallax/jarallax.min.js"></script>
+    <script src="../assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
+    <script src="../assets/vendors/jquery-appear/jquery.appear.min.js"></script>
+    <script src="../assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
+    <script src="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/vendors/jquery-validate/jquery.validate.min.js"></script>
+    <script src="../assets/vendors/nouislider/nouislider.min.js"></script>
+    <script src="../assets/vendors/odometer/odometer.min.js"></script>
+    <script src="../assets/vendors/swiper/swiper.min.js"></script>
+    <script src="../assets/vendors/tiny-slider/tiny-slider.min.js"></script>
+    <script src="../assets/vendors/wnumb/wNumb.min.js"></script>
+    <script src="../assets/vendors/wow/wow.js"></script>
+    <script src="../assets/vendors/isotope/isotope.js"></script>
+    <script src="../assets/vendors/countdown/countdown.min.js"></script>
+    <script src="../assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="../assets/vendors/bxslider/jquery.bxslider.min.js"></script>
+    <script src="../assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="../assets/vendors/vegas/vegas.min.js"></script>
+    <script src="../assets/vendors/nice-select/jquery.nice-select.min.js"></script>
+    <script src="../assets/vendors/jquery-ui/jquery-ui.js"></script>
+    <script src="../assets/vendors/timepicker/timePicker.js"></script>
 
 
 
 
     <!-- template js -->
-    <script src="assets/js/qutiiz.js"></script>
+    <script src="../assets/js/qutiiz.js"></script>
 </body>
 
 </html>
